overflow problem fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ body {
     @apply text-blue-800 w-[200px] text-center p-4 border-blue-900 border-solid border-2 rounded hover:bg-slate-500 hover:text-white duration-300
   }
   .container{
-    @apply w-screen px-[16px] sm:px-[60px] pt-4 pb-11 max-w-[1320px] mx-auto overflow-x-hidden ;
+    @apply px-[16px] sm:px-[60px] pt-4 pb-11 max-w-[1320px] mx-auto ;
   }
   .heading{
     font-family: Arsenal;
